bynkc/tests/fixtures/negative/328_foreach_in_pure_context/input.bynk
commons demo.foreachpure

fn unit() -> Effect[()] {
  Effect.pure(())
}

fn bad(xs: List[Int]) -> Int {
  let n = xs.forEach((x: Int) => unit())
  5
}
